# ikarus

./: CMakeLists.txt  README.md  main.cpp
src/: either.h  serial_io.cpp  serial_io.h
test/: CMakeLists.txt  CMakeLists.txt.in  main_test.cpp
